classDiagram
    class Asteroid {
        +AsteroidIdentity identity
        +Orbit orbit
        +PhysicalProperties physical
        +CloseApproachHistory close_approach_history
        +CloseApproachSummary close_approach_summary
        +SentryRiskSignal sentry_signal
        +bool neo
        +bool pha
        +object_key() str
        +display_name() str
        +has_risk_relevant_data() bool
        +to_feature_dict() dict
        +to_dict() dict
    }

    class AsteroidIdentity {
        +str object_key
        +str spkid
        +str des
        +str full_name
        +str name
        +str orbit_class_code
        +str orbit_class_name
        +best_identifier() str
        +display_name() str
        +to_dict() dict
    }

    class Orbit {
        +float e
        +float a
        +float q
        +float i
        +float om
        +float w
        +float ma
        +float n
        +float per
        +float ad
        +float moid
        +float moid_ld
        +str condition_code
        +float arc_length
        +int n_obs_used
        +float rms
        +has_minimum_orbital_data() bool
        +orbital_vector() list
        +proximity_indicator() float
        +uncertainty_indicator() float
        +to_dict() dict
    }

    class PhysicalProperties {
        +float h
        +float diameter
        +float albedo
        +float log_diameter
        +has_size_information() bool
        +size_indicator() float
        +to_dict() dict
    }

    class CloseApproach {
        +str close_approach_datetime
        +float dist
        +float dist_min
        +float dist_max
        +float v_rel
        +float v_inf
        +str body
        +distance_indicator() float
        +velocity_indicator() float
        +to_dict() dict
    }

    class CloseApproachHistory {
        +tuple approaches
        +count() int
        +has_approaches() bool
        +closest() CloseApproach
        +fastest() CloseApproach
        +next_approach() CloseApproach
        +summarize() CloseApproachSummary
        +to_dict() dict
    }

    class CloseApproachSummary {
        +float min_close_approach_dist
        +float min_close_approach_dist_min
        +float max_close_approach_v_rel
        +str next_close_approach_datetime
        +int close_approach_count
        +has_close_approach_data() bool
        +approach_priority_indicator() float
        +to_dict() dict
    }

    class SentryRiskSignal {
        +bool sentry_flag
        +float sentry_ip
        +float sentry_ps_cum
        +float sentry_ps_max
        +float sentry_ts_max
        +int sentry_n_imp
        +has_sentry_signal() bool
        +sentry_priority_indicator() float
        +to_dict() dict
    }

    Asteroid *-- AsteroidIdentity : identity
    Asteroid *-- Orbit : orbit
    Asteroid *-- PhysicalProperties : physical
    Asteroid o-- CloseApproachHistory : close approach history
    CloseApproachHistory *-- CloseApproach : approaches
    CloseApproachHistory --> CloseApproachSummary : summarizes
    Asteroid o-- CloseApproachSummary : close approach summary
    Asteroid o-- SentryRiskSignal : sentry signal
